--- a/SplineCAD/App.xaml
+++ b/SplineCAD/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="SplineCam.App"
+﻿<Application x:Class="SplineCAD.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:SplineCam"
+             xmlns:local="clr-namespace:SplineCAD"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
