--- a/SplineCAD/MainWindow.xaml
+++ b/SplineCAD/MainWindow.xaml
@@ -6,7 +6,8 @@
         xmlns:local="clr-namespace:SplineCAD"
         xmlns:SCUI="clr-namespace:SplineCAD.UIControls"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="350" Width="525"
+        Loaded="MainWindow_OnLoaded">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="20" />
@@ -17,7 +18,7 @@
             <ColumnDefinition  Width="100"/>
         </Grid.ColumnDefinitions>
         <SCUI:Menu Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" />
-        <WindowsFormsHost Initialized="SurfaceInitialized"  Grid.Column="0" Grid.Row="1" Name="imageHost" />
+        <WindowsFormsHost  Grid.Column="0" Grid.Row="1" Name="imageHost" />
         <SCUI:RightSideTools Grid.Column="1" Grid.Row="1" />
     </Grid>
 </Window>
