--- a/SplineCAD/UIControls/RightSideTools.xaml
+++ b/SplineCAD/UIControls/RightSideTools.xaml
@@ -13,5 +13,6 @@
         <TextBlock>
             super rzeczy
         </TextBlock>
+        <local:ObjectsList></local:ObjectsList>
     </StackPanel>
 </UserControl>
