--- a/SplineCAD/UIControls/SelectedItemDescription.xaml
+++ b/SplineCAD/UIControls/SelectedItemDescription.xaml
@@ -11,6 +11,8 @@
             <RowDefinition Height="25" />
             <RowDefinition Height="25" />
             <RowDefinition Height="25" />
+            <RowDefinition Height="25" />
+            <RowDefinition Height="25" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -23,5 +25,15 @@
         <ToggleButton Grid.Row="1" Grid.Column="1" IsChecked="{Binding PolygonVisible}" />
         <TextBlock Grid.Row="2">Fill Surface</TextBlock>
         <ToggleButton Grid.Row="2" Grid.Column="1" IsChecked="{Binding FillSurface}" />
+        <TextBlock Grid.Row="3">PatchDiv</TextBlock>
+        <Grid Grid.Row="3" Grid.Column="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <local:NumericSlider Grid.Column="0" Value="{Binding PatchDivX}" IncrementMultiplier="1" ></local:NumericSlider>
+            <local:NumericSlider Grid.Column="1" Value="{Binding PatchDivY}" IncrementMultiplier="1" ></local:NumericSlider>
+        </Grid>
+        
     </Grid>
 </UserControl>
