--- a/SplineCAD/UIControls/Menu.xaml
+++ b/SplineCAD/UIControls/Menu.xaml
@@ -13,6 +13,7 @@
         </MenuItem>
         <MenuItem Header="Splines">
             <MenuItem Header="Add B-Spline" Command="{Binding CreateBsplineCommand}" />
+            <MenuItem Header="Add NURBS" Command="{Binding CreateNurbsCommand}" />
             <MenuItem Header="Gidda man a cookie" />
         </MenuItem>
     </Menu>
