--- a/SplineCAD/UIControls/SelectedItemDescription.xaml
+++ b/SplineCAD/UIControls/SelectedItemDescription.xaml
@@ -108,6 +108,7 @@
                                 <RowDefinition Height="25" />
                                 <RowDefinition Height="25" />
                                 <RowDefinition Height="25" />
+                                <RowDefinition Height="25" />
                             </Grid.RowDefinitions>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"/>
@@ -120,8 +121,12 @@
                             <ToggleButton Grid.Row="1" Grid.Column="1" IsChecked="{Binding PolygonVisible}" />
                             <TextBlock Grid.Row="2" Grid.Column="0">Fill Surface</TextBlock>
                             <ToggleButton Grid.Row="2" Grid.Column="1" IsChecked="{Binding FillSurface}" />
-                            <TextBlock Grid.Row="3" Grid.Column="0">PatchDiv</TextBlock>
-                            <Grid Grid.Row="3" Grid.Column="1">
+
+                            <TextBlock Grid.Row="3">Surface Color</TextBlock>
+                            <xctk:ColorPicker Grid.Row="3" Grid.Column="1" SelectedColor="{Binding SurfaceColor}"></xctk:ColorPicker>
+
+                            <TextBlock Grid.Row="4" Grid.Column="0">PatchDiv</TextBlock>
+                            <Grid Grid.Row="4" Grid.Column="1">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="*" />
                                     <ColumnDefinition Width="*" />
@@ -129,11 +134,11 @@
                                 <local:NumericSlider Grid.Column="0" Value="{Binding PatchDivX}" IncrementMultiplier="1" ></local:NumericSlider>
                                 <local:NumericSlider Grid.Column="1" Value="{Binding PatchDivY}" IncrementMultiplier="1" ></local:NumericSlider>
                             </Grid>
-                            <ToggleButton Grid.Row="4" Grid.Column="0" IsChecked="{Binding U}" />
-                            <local:NumericSlider Grid.Row="4" Grid.Column="1" Value="{Binding Val}" IncrementMultiplier="0.01" />
-                            <local:NumericSlider Grid.Row="5" Grid.Column="0" Value="{Binding ValFrom}" IncrementMultiplier="0.01" />
-                            <local:NumericSlider Grid.Row="5" Grid.Column="1" Value="{Binding ValTo}" IncrementMultiplier="0.01" />
-                            <Button Grid.Row="6" Grid.Column="1" Command="{Binding AddEdge}" />
+                            <ToggleButton Grid.Row="5" Grid.Column="0" IsChecked="{Binding U}" />
+                            <local:NumericSlider Grid.Row="5" Grid.Column="1" Value="{Binding Val}" IncrementMultiplier="0.01" />
+                            <local:NumericSlider Grid.Row="6" Grid.Column="0" Value="{Binding ValFrom}" IncrementMultiplier="0.01" />
+                            <local:NumericSlider Grid.Row="6" Grid.Column="1" Value="{Binding ValTo}" IncrementMultiplier="0.01" />
+                            <Button Grid.Row="7" Grid.Column="1" Command="{Binding AddEdge}" />
                         </Grid>
                     </DataTemplate>
                 </ContentControl.Resources>
